code/style.css
/* -------------------- */
/* Custom Properties    */
/* -------------------- */

:root {
  /* Colors */
  --clr-dark: 230 35% 7%;
  --clr-light: 231 77% 90%;
  --clr-white: 0 0% 100%;

  /* Font-size */
  --fs-900: clamp(5rem, 10vw + 1rem, 9.375rem);
  --fs-800: 3.5rem;
  --fs-700: 1.5rem;
  --fs-600: 1rem;
  --fs-500: 1rem;
  --fs-400: 0.9375rem;
  --fs-300: 1rem;
  --fs-200: 0.875rem;

  /* Font-families */
  --ff-serif: "Bellefair", serif;
  --ff-sans-cond: "Barlow Condensed", sans-serif;
  --ff-sans-normal: "Barlow", sans-serif;
}

@media (min-width: 35em) {
  :root {
    --fs-800: 5rem;
    --fs-700: 2.5rem;
    --fs-600: 1.5rem;
    --fs-500: 1.25rem;
    --fs-400: 1rem;
  }
}

@media (min-width: 45em) {
  :root {
    /* Font-size */
    --fs-800: 6.25rem;
    --fs-700: 3.5rem;
    --fs-600: 2rem;
    --fs-500: 1.75rem;
    --fs-400: 1.125rem;
  }
}

/* -------------------- */
/*        RESET         */
/* -------------------- */

/* Box sizing */

*,
*::before,
*::after:after {
  box-sizing: border-box;
}

/* Reset margins */
body,
h1,
h2,
h3,
h4,
h5,
p,
figure,
picture {
  margin: 0;
}

h1,
h2,
h3,
h4,
h5,
p {
  font-weight: 400;
}

/* Set up the body */
body {
  font-family: var(--ff-sans-normal);
  font-size: var(--fs-400);
  color: hsl(var(--clr-white));
  background-color: hsl(var(--clr-dark));
  line-height: 1.5;
  min-height: 100vh;
  display: grid;
  grid-template-rows: min-content 1fr;
  overflow-x: hidden;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Make form elements easier to work with */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove animations for people who've turned them off*/

@media (prefers-reduced-motion: reduce) {
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1ms !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* -------------------- */
/* Utility Classes      */
/* -------------------- */

.flex {
  display: flex;
  gap: var(--gap, 2rem);
}

.grid {
  display: grid;
  gap: var(--gap, 1rem);
}

.d-block {
  display: block;
}

/* Spacing */
.flow > *:not(:first-child) {
  margin-top: var(--flow-space, 1rem);
  /* outline: 1px solid red; */
}

.container {
  padding: 0 2em;
  margin: 0 auto;
  max-width: 80rem;
}

/* Screen reader only */
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

/* Colors */

.bg-dark {
  background-color: hsl(var(--clr-dark));
}

.bg-light {
  background-color: hsl(var(--clr-light));
}

.bg-white {
  background-color: hsl(var(--clr-white));
}

.text-dark {
  color: hsl(var(--clr-dark));
}

.text-light {
  color: hsl(var(--clr-light));
}

.text-white {
  color: hsl(var(--clr-white));
}

/* Typography */

.ff-serif {
  font-family: var(--ff-serif);
}
.ff-sans-cond {
  font-family: var(--ff-sans-cond);
}
.ff-sans-normal {
  font-family: var(--ff-sans-normal);
}

.letter-spacing-1 {
  letter-spacing: 4.75px;
}
.letter-spacing-2 {
  letter-spacing: 2.7px;
}
.letter-spacing-3 {
  letter-spacing: 2.35px;
}

.uppercase {
  text-transform: uppercase;
}

.fs-900 {
  font-size: var(--fs-900);
}
.fs-800 {
  font-size: var(--fs-800);
}
.fs-700 {
  font-size: var(--fs-700);
}
.fs-600 {
  font-size: var(--fs-600);
}
.fs-500 {
  font-size: var(--fs-500);
}
.fs-400 {
  font-size: var(--fs-400);
}
.fs-300 {
  font-size: var(--fs-300);
}
.fs-200 {
  font-size: var(--fs-200);
}

.fs-900,
.fs-800,
.fs-700,
.fs-600 {
  line-height: 1.1;
}

.numbered-title {
  font-family: var(--ff-sans-cond);
  font-size: var(--500);
  text-transform: uppercase;
  letter-spacing: 4.72px;
}

.numbered-title span {
  margin-right: 0.5em;
  font-weight: 700;
  color: hsl(var(--clr-white) / 0.25);
}

/* -------------------- */
/* Components           */
/* -------------------- */

.large-button {
  /* display: inline block; */
  font-size: 2rem;
  position: relative;
  display: inline-grid;
  z-index: 1;
  place-items: center;
  /* padding: 0 2em; */
  border-radius: 50%;
  width: 200px;
  height: 200px;
  /* aspect-ratio: 1; */
  text-decoration: none;
}

.large-button:after {
  content: "";
  position: absolute;
  z-index: -1;
  background: hsl(var(--clr-white) / 0.15);
  width: 100%;
  height: 100%;
  border-radius: 50%;
  opacity: 0;
  transition: opacity 500ms linear, transform 750ms ease-in-out;
}

.large-button:hover:after,
.large-button:focus:after {
  transform: scale(1.5);
  opacity: 1;
}

/* Primary Header */
.logo {
  margin: 1.5rem clamp(1.5rem, 5vw, 3.5rem);
}

.primary-header {
  justify-content: space-between;
  align-items: center;
}

.primary-navigation {
  --gap: clamp(1.5rem, 5vw, 3.5rem);
  --uderline-gap: 2rem;
  list-style: none;
  padding: 0;
  margin: 0;
  background: hsl(var(--clr-white) / 0.05);
  backdrop-filter: blur(1rem);
}

.primary-navigation a {
  text-decoration: none;
}

.primary-navigation a > span {
  font-weight: 700;
  margin-right: 0.2em;
}

.mobile-nav-toggle {
  display: none;
}

@media (max-width: 35rem) {
  .primary-navigation {
    --uderline-gap: 0.5rem;
    position: fixed;
    inset: 0 0 0 20%;
    z-index: 1000;
    list-style: none;
    padding: min(20rem, 15vh) 2rem;
    margin: 0;
    flex-direction: column;
    transform: translateX(100%);
    transition: transform 500ms ease-in-out;
  }

  .primary-navigation[data-visible="true"] {
    transform: translateX(0);
  }

  .primary-navigation.underline-indicators > .active {
    border: 0;
  }

  .mobile-nav-toggle {
    display: block;
    position: absolute;
    z-index: 2000;
    right: 1rem;
    top: 2rem;
    background: transparent;
    border: 0;
    background-image: url(./assets/shared/icon-hamburger.svg);
    background-repeat: no-repeat;
    width: 1.5em;
    height: 1.4em;
  }

  .mobile-nav-toggle[aria-expanded="true"] {
    background-image: url(./assets/shared/icon-close.svg);
  }

  .mobile-nav-toggle:focus-visible {
    outline: 5ps solid white;
    outline-offset: 5px;
  }
}

@media (min-width: 35em) {
  .primary-navigation {
    padding-inline: clamp(3rem, 7vw, 7rem);
  }
}

@media (min-width: 35rem) and (max-width: 44.999rem) {
  .primary-navigation a > span {
    display: none;
  }
}

@media (min-width: 45em) {
  .primary-header::after {
    content: "";
    display: block;
    position: relative;
    height: 1px;
    width: 100%;
    margin-right: -2.5rem;
    background: hsl(var(--clr-white) / 0.25);
    order: 1;
  }

  nav {
    order: 2;
  }

  .primary-navigation {
    margin-block: 2rem;
  }
}

/* Select every direct dicended of the indicators */
.underline-indicators > * {
  padding: var(--underline-gap, 1rem) 0;
  border: 0;
  cursor: pointer;
  border-bottom: 0.2rem solid hsl(var(--clr-white) / 0);
}

.underline-indicators > *:hover,
.underline-indicators > *:focus {
  border-color: hsl(var(--clr-white) / 0.5);
}

.underline-indicators > .active,
.underline-indicators > [aria-selected="true"] {
  color: hsl(var(--clr-white) / 1);
  border-color: hsl(var(--clr-white) / 1);
}

.tab-list {
  --gap: 2rem;
}

/* Dot Indicators */
.dot-indicators > * {
  cursor: pointer;
  border: 0;
  border-radius: 50%;
  padding: 0.5em;
  background-color: hsl(var(--clr-white) / 0.25);
}

.dot-indicators > *:hover,
.dot-indicators > *:focus {
  background-color: hsl(var(--clr-white) / 0.5);
}

.dot-indicators > [aria-selected="true"] {
  background-color: hsl(var(--clr-white) / 1);
}

.number-indicators > * {
  cursor: pointer;
  border: 0;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  padding: 0.5em;
  border: 1px solid hsl(var(--clr-white) / 0.5);
  background-color: hsl(var(--clr-dark));
}

.number-indicators > *:hover,
.number-indicators > *:focus {
  border: 1px solid hsl(var(--clr-white) / 1);
  background-color: hsl(var(--clr-dark));
}

.number-indicators > [aria-selected="true"] {
  color: hsl(var(--clr-dark));
  background-color: hsl(var(--clr-white) / 1);
}

/* -------------------------- */
/* Page Specific background   */
/* -------------------------- */
body {
  background-size: cover;
  background-position: bottom center;
}

/* Home */
.home {
  background-image: url(./assets/home/background-home-mobile.png);
}

@media (min-width: 35rem) {
  .home {
    background-position: center center;
    background-image: url(./assets/home/background-home-tablet.png);
  }
}

@media (min-width: 45rem) {
  .home {
    background-image: url(./assets/home/background-home-desktop.png);
  }
}

/* -------------------------- */
/* LAYOUT                     */
/* -------------------------- */

.grid-container {
  text-align: center;
  border: 1px solid limegreen;
  display: grid;
  place-items: center;
  padding-inline: 1rem;
  padding-bottom: 3rem;
}

/* anything inside the .grid-container */
.grid-container * {
  max-width: 50ch;
}

/* Destination Layout */
.grid-container-destination {
  grid-template-areas:
    "title"
    "image"
    "tabs"
    "content";
}

.numbered-title {
  grid-area: title;
}

.grid-container-destination > img {
  grid-area: image;
  max-width: 80%;
}

.grid-container-destination > .tab-list {
  grid-area: tabs;
}

.grid-container-destination > .destination-info {
  grid-area: content;
}

.destination-meta {
  flex-direction: column;
  border-top: 1px solid hsl(var(--clr-white) / 0.25);
  padding-top: 2.5rem;
  margin-top: 2.5rem;
}

@media (min-width: 35em) {
  .numbered-title {
    justify-self: start;
    margin-top: 2rem;
  }

  .destination-meta {
    flex-direction: row;
    justify-content: space-evenly;
  }
}

.destination-meta p {
  font-size: 1.75rem;
}

@media (min-width: 45em) {
  .grid-container {
    text-align: left;
    column-gap: var(--container-gap, 2rem);
    grid-template-columns: minmax(2rem, 1fr) minmax(0, 40rem) minmax(0, 40rem) minmax(
        2rem,
        1fr
      );
  }

  .grid-container-home {
    /* padding-bottom: 10rem; */
    align-items: center;
  }

  .grid-container > *:first-child {
    padding-bottom: 7em;
    grid-column: 2;
  }

  .grid-container > *:last-child {
    grid-column: 3;
  }

  .grid-container-destination {
    justify-items: start;
    align-content: start;
    grid-template-areas:
      ". title title ."
      ". image tabs ."
      ". image content .";
  }

  .grid-container-destination > img {
    max-width: 90%;
  }

  .destination-meta {
    --gap: 6rem;
    justify-content: start;
  }
}

